# rio-rs

./: .gitignore  .pre-release  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  README.tpl  README.tpl.md  cliff.toml  compose.yaml  justfile  pre-commit  release-please-config.json  release-plz.toml  release.toml
.config/: nextest.ci.toml  nextest.toml
.github/workflows/: release.yaml  rust.yaml
.zed/: tasks.json
benches/: benchmark.rs
example-utils/: Cargo.toml
example-utils/src/: grains.rs  lib.rs  messages.rs
examples/: client.rs  server.rs
examples/black-jack/: Cargo.toml  README.md  compose-cockroach.yaml  run-server  run-server-cockroach  run-server-sqlite
examples/black-jack-ffi/: Cargo.toml
examples/black-jack-ffi/src/: lib.rs
examples/black-jack-wasm/: Cargo.toml
examples/black-jack/src/: card.rs  game_server.rs  hand.rs  lib.rs  messages.rs  registry.rs  rio_server.rs  table.rs
examples/black-jack/src/services/: cassino.rs  mod.rs  table.rs
examples/black-jack/tests/: game.rs
examples/custom-storage/: Cargo.toml
examples/custom-storage/src/: lib.rs  messages.rs  ping_state.rs  registry.rs  services.rs
examples/metric-aggregator/: Cargo.toml  Makefile  README.md  docker-compose.yaml  justfile
examples/metric-aggregator/src/: grains.rs  lib.rs  messages.rs  registry.rs  services.rs
examples/observability/: Cargo.toml  compose.yaml
examples/observability/src/: services.rs
examples/ping-pong/: Cargo.toml  README.md
examples/ping-pong/src/: messages.rs  services.rs
examples/presence/: .gitignore  Cargo.toml  README.md
examples/presence/src/: messages.rs  registry.rs  services.rs
examples/pyng-pong/: .gitignore  app.py  justfile  people.py
examples/pyng-pong/rio_rs_guest/rio_service/: __init__.py
examples/pyng-pong/rio_rs_guest/rio_service/exports/: __init__.py  people.py
examples/pyng-pong/rio_rs_guest/rio_service/imports/: messages.py
examples/pyng-pong/wit/rio-rs/: world.wit
examples/telemetry/: Cargo.toml  Dockerfile  README.md  compose.yaml
examples/telemetry/src/: services.rs
examples/wasm-registry/: Cargo.toml  app.wasm  wit
examples/wasm-registry/src/: main.rs
rio-macros/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
rio-macros/src/: codegen.rs  crate_utilities.rs  lib.rs  managed_state.rs  registry.rs  type_name.rs  with_id.rs
rio-macros/tests/: ui.rs
rio-macros/tests/ui_fail/: 01-sanity.rs  01-sanity.stderr  make_registry_no_handler.rs  make_registry_no_handler.stderr  make_registry_type_mismatch.rs  make_registry_type_mismatch.stderr  managed_state_missing_service_object_imp.rs  managed_state_missing_service_object_imp.stderr  managed_state_non_existing_state_provicer.rs  managed_state_non_existing_state_provicer.stderr  type_name_ident_arg.rs  type_name_ident_arg.stderr  with_id.rs  with_id.stderr
rio-macros/tests/ui_pass/: managed_state.rs  registry_client_and_server.rs  type_name_arguments.rs  type_name_basic.rs  with_id.rs
rio-rs/: .dockerignore  CHANGELOG.md  Cargo.toml
rio-rs/src/: app_data.rs  errors.rs  lib.rs  message_router.rs  protocol.rs  registry.rs  server.rs  service.rs  service_object.rs  sorted_set.rs  sql_migration.rs
rio-rs/src/client/: builder.rs  mod.rs  pool.rs  tower_services.rs
rio-rs/src/cluster/: mod.rs
rio-rs/src/cluster/membership_protocol/: local.rs  mod.rs  peer_to_peer.rs
rio-rs/src/cluster/storage/: http.rs  local.rs  mod.rs  postgres.rs  redis.rs  sql.rs  sqlite.rs
rio-rs/src/cluster/storage/migrations/: 0001-postgres-init.sql
rio-rs/src/object_placement/: local.rs  mod.rs  postgres.rs  redis.rs  sql.rs  sqlite.rs
rio-rs/src/object_placement/migrations/: 0001-postgres-init.sql
rio-rs/src/registry/: handler.rs  identifiable_type.rs  mod.rs
rio-rs/src/state/: README.md  local.rs  mod.rs  postgres.rs  redis.rs  sql.rs  sqlite.rs
rio-rs/src/state/migrations/: 0001-postgres-init.sql  0001-sqlite-init.sql
rio-rs/src/test_utils/: mod.rs
rio-rs/tests/: client_server_integration_test.rs  cluster_storage_backend.rs  db_utils.rs  object_allocation.rs  object_placement_backend.rs  object_service_error_handling.rs  object_state.rs  server_internal_client_test.rs  server_utils.rs  service_lifecycle.rs  state.rs
src/: app_data.rs  channel_registry.rs  client.rs  errors.rs  grain.rs  lib.rs  main.rs  message_router.rs  messages.rs  protocol.rs  registry.rs  server.rs  service.rs  service_object.rs  silo.rs  tap_err.rs
src/client/: builder.rs  client.rs  mod.rs  pool.rs  subscription_tower_services.rs  tower_services.rs
src/cluster/membership_protocol/: local.rs  mod.rs  peer_to_peer.rs
src/cluster/storage/: local.rs  mod.rs  sql.rs
src/cluster_provider/: mod.rs  peer_to_peer.rs
src/grain_placement_provider/: mod.rs  sql.rs
src/membership_provider/: mod.rs
src/object_placement/: local.rs  mod.rs  sql.rs
src/state/: README.md  local.rs  mod.rs  sql.rs
src/state_provider/: README.md  mod.rs  sql.rs
tests/: client_server_integration_test.rs
