[package]
name = "rio-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
tokio-stream = { version = "0.1.8" }

[dev-dependencies]
futures = "0.3.0"
example-utils = { path = "example-utils" }
