[package]
name = "rio-rs"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
bincode = "1.3.3"
dashmap = "5.0.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8" }
tokio-util = { version = "0.6", features = ["full"] }
rio-macros = { path = "./rio-macros" }

# Need for futures::SyncExt (Framed.send)
futures = "0.3.0"

# Date types for SQLx
chrono = "0.4.19"

# Store grain placements locally
lru = "0.7.2"

# Client::send needs recursion (for now)
async-recursion = "0.3.2"

# AppData
state = "0.5.2"

# Client Pool
bb8 = "0.7.1"

# DB
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "postgres", "any", "chrono" ] }

# I use Box<dyn *> to avoid monomorphization of some types (mostly the providers)
dyn-clone = "1.0.4"
