[package]
name = "rio-rs"
version = "0.1.0"
edition = "2018"
license-file = "LICENSE"
autoexamples = false

[dependencies]
async-trait = "0.1.51"
bincode = "1.3.3"
dashmap = "5.3.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.8" }
tokio-util = { version = "0.6", features = ["full"] }
rio-macros = { path = "./rio-macros" }
tower = { version = "0.4.12", features = ["full"] }

# Need for futures::SyncExt (Framed.send)
futures = "0.3.0"

# Date types for SQLx
chrono = "0.4.19"

# Store ServiceObject's placements locally
lru = "0.7.7"

# Client::send needs recursion (for now)
async-recursion = "0.3.2"

# AppData
state = "0.5.2"

# Client Pool
bb8 = "0.7.1"

# DB
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "postgres", "any", "chrono" ] }
