[package]
name = "rio-macros"
version = "0.1.0"
edition = "2021"
description = "Proc macros to help developing rio-rs applications"
license-file = "../LICENSE"
repository = "https://github.com/rcelha/rio-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
rio-rs = { path = "../" }
trybuild = "1.0"
async-trait = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
