[package]
name = "rio-rs"
version = "0.5.2"
edition = "2021"
license-file = "../LICENSE"
repository = "https://github.com/rcelha/rio-rs"
description = "Distributed stateful service framework"
rust-version = "1.83"

[features]
default = ["redis", "sqlite", "postgres", "local"]
sqlite = ["sql", "sqlx/sqlite"]
postgres = ["sql", "sqlx/postgres"]
sql = ["dep:sqlx"]
redis = ["dep:redis", "dep:bb8-redis"]
local = []
http = ["dep:axum", "dep:reqwest"]
full = ["redis", "sqlite", "postgres", "local", "http"]

[dependencies]
async-stream = "0.3.6"
async-trait = { package = "async-trait-sync", version = "0.1.36" }
axum = { version = "0.8.8", optional = true }
bb8 = "0.9.1" # Client Pool
bb8-redis = { version = "0.26.0", optional = true }
bincode = "1.3.3" # TODO replace it with something supported or fork
chrono = "0.4.43"# Date types for SQLx
dashmap = "6.1.0"
bon = "3.9.0"
env_logger = "0.11.9"
futures = "0.3.31" # Need for futures::SyncExt (Framed.send)
log = { version = "0.4.29", features = ["kv"] }
lru = "0.16.3" # Store ServiceObject's placements locally

netwatch = "0.12"
papaya = "0.2.3"
rand = "0.10"
redis = { version = "1.0.3", optional = true, features = ["aio"] }
reqwest = { version = "0.13.2", optional = true, features = ["json"] }
rio-macros = { path = "../rio-macros", version = "0.5.2" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
sqlx = { version = "0.8", optional = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
    "postgres",
    "chrono",
] }
state = "0.5" # AppData/context
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
lazy_static = "1.4.0"
