[package]
name = "black-jack"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { git = "https://github.com/rcelha/async-trait", branch = "feature_add_sync_option_for_future" }
bevy = { version = "0.8.1", features = [
  "animation",
  "bevy_asset",
  "bevy_scene",
  "bevy_winit",
  "render",
  "png",
  "hdr",
  "x11",
  "filesystem_watcher",
], default-features = false }
rand = "0.8.5"
rio-rs = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
crossbeam-channel = "0.5.6"
lazy_static = "1.4.0"
clap = { version = "4.4.4", features = ["derive"] }
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v4"] }
bincode = "1.3.3"
futures = "0.3.30"
