[package]
name = "custom-storage"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[dependencies]
async-trait = { package = "async-trait-sync", version = "0.1.36" }
rio-rs = { path = "../../rio-rs", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"
bincode = "1.3.3"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "sqlite",
] }
