[package]
name = "metric-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { package = "async-trait-sync", version = "0.1.36" }
rio-rs = { path = "../../rio-rs" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.0"
rand = "0.8"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "postgres", "any", "chrono" ] }
thiserror = "2.0.11"
