[package]
name = "ping-pong"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.51"
rio-rs = { path = "../../rio-rs" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.0"
rand = "0.8"
sqlx = { version = "0.6", features = [
  "runtime-tokio-native-tls",
  "sqlite",
  "postgres",
  "any",
  "chrono",
] }
clap = { version = "3.2.20", features = ["derive"] }
