[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { git = "https://github.com/rcelha/async-trait", branch = "feature_add_sync_option_for_future" }
rio-rs = { path = "../../rio-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
futures = "0.3.30"
