[package]
name = "presence"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { package = "async-trait-sync", version = "0.1.36" }
rio-rs = { path = "../../rio-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
futures = "0.3.30"
